# light-old

./: .gitignore  README.md  meson.build
header/light/Algo/: ArrayDeque.hpp  ArrayList.hpp  BackIterator.hpp  ForwIterator.hpp  HashTable.hpp  define.hpp  depend.hpp  import.hpp
header/light/Algo/inline/: ArrayDeque.inl  ArrayList.inl  HashTable.inl
header/light/Base/: Option.hpp  Result.hpp  String.hpp  Vec2d.hpp  Vect2d.hpp  Vector.hpp  define.hpp  depend.hpp  import.hpp  math.hpp  traits.hpp  util.hpp
header/light/Base/inline/: Option.inl  Result.inl  Vec2d.inl  Vect2d.inl  Vector.inl  math.inl  util.inl
header/light/Base/traits/: RemovePtr.hpp  RemoveRef.hpp
header/light/Engine/: Engine.hpp  Entity.hpp  EntityFactory.hpp  EntityInfo.hpp  EntityManager.hpp  State.hpp  StateMachine.hpp  System.hpp  define.hpp  depend.hpp  import.hpp
header/light/Engine/inline/: EntityFactory.inl  EntityInfo.inl
header/light/Memory/: Array.hpp  Array2D.hpp  Array2d.hpp  define.hpp  depend.hpp  import.hpp  util.hpp
header/light/Memory/Origin/: BaseOrigin.hpp  (+6 more)
source/: light-main.cpp  light-test.cpp  prova.cpp
source/light/Algo/: BackIterator.cpp  ForwIterator.cpp  meson.build
source/light/Base/: String.cpp  meson.build
source/light/Engine/: Engine.cpp  Entity.cpp  EntityManager.cpp  State.cpp  StateMachine.cpp  System.cpp  meson.build
source/light/Memory/: meson.build  util.cpp
source/light/Memory/Layout/: FixedLayout.cpp
source/light/Memory/Origin/: ArenaOrigin.cpp  BaseOrigin.cpp  EmptyOrigin.cpp  KernOrigin.cpp  PoolOrigin.cpp  StackOrigin.cpp  TreeOrigin.cpp
(+5 files in other folders)
